Prevent page jump by forcing the scrollbar to always be present

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* force scrollbar to always appear, prevent content jump */
+html{overflow-y: scroll;}
+
 body {
   padding: 1.5rem;
   background: #efefef;
